fixed scrollbar on board

--- a/css/addTaskScrollbar.css
+++ b/css/addTaskScrollbar.css
@@ -3,8 +3,8 @@
 ::-webkit-scrollbar-track {
     background: rgba(255, 255, 255, 0);
     /* box-shadow: inset 0 0 5px rgb(255, 255, 255); */
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
 
 /* Handle on hover */
